--- a/styles.css
+++ b/styles.css
@@ -64,23 +64,24 @@ section {
     padding: 0 2rem;
 }
 
-.profile-img {
+.profile-container {
     width: 250px;
     height: 250px;
+    margin: 20px auto;
+    position: relative;
     border-radius: 50%;
+    overflow: hidden;
+    background-color: #f8f9fa;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.profile-img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
-    border: 3px solid #333;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    margin: 20px auto;
     display: block;
-    position: relative;
-    background-color: #f8f9fa;
-    z-index: 2;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
+    border: none;
 }
 
 picture {
@@ -415,11 +416,10 @@ button:hover {
         margin: 15px auto;
     }
 
-    .profile-img {
+    .profile-container {
         width: 200px;
         height: 200px;
-        margin: 0;
-        border: 2px solid #333;
+        margin: 15px auto;
     }
 
     .quote-container {
@@ -518,9 +518,10 @@ button:hover {
     }
 
     /* Ajustements pour les images */
-    .profile-img {
+    .profile-container {
         width: 200px;
         height: 200px;
+        margin: 15px auto;
     }
 
     .experience-images img {
@@ -782,11 +783,10 @@ button:hover {
         margin: 10px auto;
     }
 
-    .profile-img {
+    .profile-container {
         width: 180px;
         height: 180px;
-        margin: 0;
-        border: 2px solid #333;
+        margin: 10px auto;
     }
 }
 
